--- a/rpc_config/rpc_config_api/pom.xml
+++ b/rpc_config/rpc_config_api/pom.xml
@@ -12,4 +12,13 @@
     <artifactId>rpc_config_api</artifactId>
 
 
+    <dependencies>
+        <dependency>
+
+            <groupId>com.rpcfly</groupId>
+            <artifactId>rpc_registry</artifactId>
+            <version>${parent.version}</version>
+
+        </dependency>
+    </dependencies>
 </project>
