--- a/rpc_registry/rpc_registry_api/pom.xml
+++ b/rpc_registry/rpc_registry_api/pom.xml
@@ -3,21 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>rpc-config</artifactId>
+        <artifactId>rpc_registry</artifactId>
         <groupId>com.rpcfly</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>jar</packaging>
-    <artifactId>rpc_config_api</artifactId>
+
+    <artifactId>rpc_registry_api</artifactId>
 
 
-    <dependencies>
-        <dependency>
-            <groupId>com.rpcfly</groupId>
-            <artifactId>rpc_registry_api</artifactId>
-            <version>${parent.version}</version>
-        </dependency>
-
-    </dependencies>
 </project>
