--- a/rpc_registry/rpc_registry_api/pom.xml
+++ b/rpc_registry/rpc_registry_api/pom.xml
@@ -12,4 +12,11 @@
     <artifactId>rpc_registry_api</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>com.rpcfly</groupId>
+            <artifactId>rpc_common</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+    </dependencies>
 </project>
