--- a/rpc_config/pom.xml
+++ b/rpc_config/pom.xml
@@ -15,5 +15,11 @@
         <module>rpc_config_api</module>
     </modules>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.rpcfly</groupId>
+            <artifactId>rpc_common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
