--- a/rpc_config/pom.xml
+++ b/rpc_config/pom.xml
@@ -21,5 +21,10 @@
             <artifactId>rpc_common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+        </dependency>
     </dependencies>
+
 </project>
