--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,9 @@
     </modules>
 
     <properties>
+        <java_source_version>1.8</java_source_version>
         <lombok_version>1.18.6</lombok_version>
+        <logger.version>1.2.17</logger.version>
     </properties>
 
     <dependencyManagement>
@@ -28,6 +30,11 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok_version}</version>
+            </dependency>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>${logger.version}</version>
             </dependency>
 
         </dependencies>
