--- a/rpc_config/pom.xml
+++ b/rpc_config/pom.xml
@@ -19,7 +19,12 @@
         <dependency>
             <groupId>com.rpcfly</groupId>
             <artifactId>rpc_common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.rpcfly</groupId>
+            <artifactId>rpc_rpc_api</artifactId>
+            <version>${parent.version}</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
