--- a/rpc_config/rpc_config_api/src/resource/log4j.properties
+++ b/rpc_config/rpc_config_api/src/resource/log4j.properties
@@ -1,9 +1,16 @@
-log4j.rootLogger=INFO,console
-log4j.additivity.org.apache=true
-#console
-log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.Threshold=INFO
-log4j.appender.console.ImmediateFlush=true
-log4j.appender.console.Target=System.out
-log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%p] %m%n
+###set log levels###
+log4j.rootLogger=info,file, stdout
+###output to the console###
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=[%d{dd/MM/yy HH:mm:ss:SSS z}] %t %5p %c{2}: %m%n
+
+# »’÷æ ‰≥ˆ
+log4j.appender.file = org.apache.log4j.FileAppender
+log4j.appender.file.file=D:/log/all.log
+log4j.appender.file.Encoding=UTF-8
+log4j.appender.file.Threshold=DEBUG
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}[ %p ]%m%n
+log4j.appender.file.append = true
