--- a/rpc_rpc/pom.xml
+++ b/rpc_rpc/pom.xml
@@ -19,8 +19,9 @@
         <dependency>
             <groupId>com.rpcfly</groupId>
             <artifactId>rpc_common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${parent.version}</version>
         </dependency>
+
     </dependencies>
 
 </project>
