--- a/rpc_registry/rpc_registry_api/pom.xml
+++ b/rpc_registry/rpc_registry_api/pom.xml
@@ -18,5 +18,10 @@
             <artifactId>rpc_common</artifactId>
             <version>${parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.rpcfly</groupId>
+            <artifactId>rpc_rpc_api</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
     </dependencies>
 </project>
