--- a/rpc_registry/rpc_registry_api/pom.xml
+++ b/rpc_registry/rpc_registry_api/pom.xml
@@ -23,5 +23,11 @@
             <artifactId>rpc_rpc_api</artifactId>
             <version>${parent.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.rpcfly</groupId>
+            <artifactId>rpc_rpc_rpcfly</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
     </dependencies>
 </project>
